Fixed overlap alert bug

--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -149,7 +149,7 @@ img{max-width: 100%;}
 	position: fixed;
 	z-index: 1;
 	width: 100%;
-	top: 52px;
+	top: 72px;
 	padding: 10px	
 }
 .alert-main{text-align: center; font-size: 1.5em; text-transform: uppercase;}
